Added Woman Jacket section with styles and responsive using tailwind

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/290838e588.js" crossorigin="anonymous"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -23,30 +25,81 @@
 </head>
 <body class="roboto-font">
     <header class="bg-[#FFFBF0]">
-        <nav class="flex justify-between max-w-7xl m-auto py-12">
+        <nav class="flex justify-between w-4/5 m-auto py-12">
             <div class="w-72">
                 <img class="w-full" src="./icons/logo.png" alt="">
             </div>
-            <ul class="flex gap-10 font-medium roboto-font text-[#3C3C3C]">
+            <ul class="sm:flex hidden gap-10 font-medium roboto-font text-[#3C3C3C]">
                 <li><a href="">Home</a></li>
                 <li><a href="">Product</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Contact Us</a></li>
             </ul>
+            <i class="fa-solid fa-list sm:hidden"></i>
         </nav>
-        <div class="flex items-center justify-between max-w-7xl m-auto">
+        <div class="md:flex items-center justify-between w-4/5 m-auto">
             <div>
-                <h1 class="text-7xl"><span class="text-orange-400">Be the Penguins</span> 
+                <h1 class="sm:text-7xl text-5xl"><span class="text-orange-400">Be the Penguins</span> 
                     <br>
                     <span class="text-[#363958]">of Winter</span>
                 </h1>
                 <p class="text-[#3E3E3E] py-5 w-80">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <button class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] py-2 px-5 rounded-lg font-medium text-white">BUY NOW</button>
+                <button class="flex gap-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] py-4 px-8 rounded-lg font-medium text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="bg-white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                      </svg>
+                BUY NOW</button>
             </div>
             <div class="pr-16">
                 <img src="./images/model.png" alt="">
             </div>
         </div>
     </header>
+    <main>
+        <section class="sm:w-4/5 my-10 mx-auto">
+            <h1 class="text-[#363958] text-4xl">WOMan Jacket</h1>
+            <div class="sm:flex justify-between mt-7">
+                <div class="sm:w-3/12 shadow shadow-2xl p-5 rounded-lg">
+                    <img class="w-full py-4 px-7 bg-[#F1F1F1] rounded-2xl" src="./images/jacket-1.png" alt="">
+                    <h3 class="text-[#363958] text-xl my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] text-sm mb-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-[#FABE4C] text-2xl font-black">$234</h4>
+                        <button class="flex gap-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] py-2 px-4 rounded-lg font-medium text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="bg-white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                              </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+                <div class="sm:w-3/12 shadow shadow-2xl p-5 rounded-lg">
+                    <img class="w-full py-4 px-7 bg-[#F1F1F1] rounded-2xl" src="./images/jacket-1.png" alt="">
+                    <h3 class="text-[#363958] text-xl my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] text-sm mb-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-[#FABE4C] text-2xl font-black">$234</h4>
+                        <button class="flex gap-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] py-2 px-4 rounded-lg font-medium text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="bg-white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                              </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+                <div class="sm:w-3/12 shadow shadow-2xl p-5 rounded-lg">
+                    <img class="w-full py-4 px-7 bg-[#F1F1F1] rounded-2xl" src="./images/jacket-1.png" alt="">
+                    <h3 class="text-[#363958] text-xl my-3">Yellow Coat Jacket </h3>
+                    <p class="text-[#3E3E3E] text-sm mb-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-[#FABE4C] text-2xl font-black">$234</h4>
+                        <button class="flex gap-2 bg-gradient-to-r from-[#A4BC46] to-[#85A019] py-2 px-4 rounded-lg font-medium text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="bg-white" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                              </svg>
+                        BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
